Ref#153 Fix issues + markets

--- a/resources/assets/js/perfil/templates/history_bet_details.html
+++ b/resources/assets/js/perfil/templates/history_bet_details.html
@@ -26,7 +26,7 @@
     <div class="line">Total Cotas</div>
     <div class="total" id="betslip-multiOdds" >{{odd}}</div>
     {{/if_eq}}
-    <div class="line">Possível retorno</div>
+    <div class="line">Possível Retorno</div>
     <div class="total">€ {{multiply amount odd}}</div>
 </div>
 {{/with}}
