Ref#157: Fix Betslip Thanks Mike

--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1179,6 +1179,11 @@
 .betslip > .content .bets .row .event {
   font-weight: bold;
   color: #FFF;
+  max-width: 240px;
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .betslip > .content .bets .row .odds {
