--- a/resources/assets/sass/sports/liveMenu.scss
+++ b/resources/assets/sass/sports/liveMenu.scss
@@ -17,7 +17,10 @@
         cursor: pointer;
 
         &.selected {
-            color: #FFF;
+            color: $color-white;
+            &:hover {
+                color: $color-black;
+            }
         }
 
         .expand {
