Ref#157: Fix Login text

--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -867,7 +867,7 @@
   background-color: #1e293e;
 }
 
-.fixtures .header.sport {
+.fixtures .header.sport, .fixtures .header.highlights {
   background-color: #4a7fb3;
 }
 
