--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -14,7 +14,7 @@
         font-size: 16px;
         background-color: #1e293e;
 
-        &.sport {
+        &.sport,&.highlights {
             background-color: #4a7fb3;
         }
 
