--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -1,9 +1,16 @@
 .betslip {
+    position: absolute;
+    left: 889px;
     float: left;
     color: #fff;
     width: 310px;
     text-align: center;
     word-break: break-all;
+    z-index: 100;
+    background: #101928;
+    -webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    -moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
 
     .tab {
         font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
@@ -41,6 +48,8 @@
     }
 
     > .content {
+        z-index: 100;
+        background: #101928;
 
         .error {
             color: #f00;
@@ -92,17 +101,37 @@
             margin: 5px 0;
         }
 
+        .bets-content {
+            overflow-y: auto;
+
+            &::-webkit-scrollbar {
+                width: 7px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background: #607d8b;
+                border-radius: 5px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: #101928;
+            }
+
+            &.simple {
+                max-height: 410px;
+            }
+
+            &.multiple {
+                max-height: 382px;
+            }
+        }
+
         .bets {
             font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
             background-color: #2d415c;
             padding: 6px 10px;
             margin-bottom: 4px;
             font-size: 14px;
-            //margin-top: 2px;
-
-            &.eventError {
-                border: 2px solid #ff3300;
-            }
 
             .row {
                 .remove {
