--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -12,16 +12,12 @@
     .header {
         height: 42px;
         font-size: 16px;
-        background-color: #1e293e;
-
-        &.sport,&.highlights {
-            background-color: #4a7fb3;
-        }
 
         .date {
             width: 60px;
             border-radius: 5px 0 0;
             text-align: left;
+            background-color: #1e293e;
 
             i {
                 margin-left: 15px;
@@ -35,10 +31,15 @@
             font-weight: normal;
             text-align: left;
             width: 200px;
+            background-color: #1e293e;
 
             span {
                 margin-left: -15px;
             }
+        }
+
+        .prematch {
+            background-color: #1e293e;
         }
 
         .live {
@@ -78,6 +79,7 @@
         }
 
         .marketCount {
+            background-color: #1e293e;
             width: 50px;
             border-radius: 0 5px 0 0;
             cursor: pointer;
@@ -91,6 +93,9 @@
             }
         }
 
+        .sport, .highgames {
+            background-color: #4a7fb3;
+        }
     }
 
     .fixture {
