ref #164: fix live background

--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -96,6 +96,12 @@
         .sport, .highgames {
             background-color: #4a7fb3;
         }
+
+        .live {
+            font-family: $font-exo;
+            font-size: 14px;
+            background-color: #ff3300;
+        }
     }
 
     .fixture {
