ref #164: change menu hover background and color

--- a/resources/assets/sass/sports/sportsMenu.scss
+++ b/resources/assets/sass/sports/sportsMenu.scss
@@ -134,8 +134,8 @@
     height: 35px;
 }
 .sportsMenu-box-highlights-submenu:hover{
-    background-color: #FFF;
-    color: #536883;
+    background-color: #4a7fb3;
+    color:  #fff;
 }
 
 .sportsMenu-box-popular {
