--- a/resources/assets/sass/sportsMenu/competitionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/competitionsMenu.scss
@@ -20,8 +20,8 @@
     }
 
     .competition:hover {
-        background: #FFF;
-        color: #101928;
+        background-color: #4a7fb3;
+        color:  #fff;
     }
 
 }
