--- a/resources/assets/sass/sportsMenu/fixturesMenu.scss
+++ b/resources/assets/sass/sportsMenu/fixturesMenu.scss
@@ -48,8 +48,8 @@
     }
 
     .fixture:hover {
-        color: #101928;
-        background: #FFF;
+        background-color: #4a7fb3;
+        color:  #fff;
     }
 
 }
