--- a/resources/assets/sass/sportsMenu/regionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/regionsMenu.scss
@@ -29,7 +29,7 @@
 
     }
     .region:hover{
-        background-color: #FFF;
-        color: #2d415c;
+        background-color: #4a7fb3;
+        color:  #fff;
     }
 }
