--- a/resources/assets/sass/sportsMenu/sportsMenu.scss
+++ b/resources/assets/sass/sportsMenu/sportsMenu.scss
@@ -31,7 +31,7 @@
     }
 
     .sport:hover {
-        background-color: #FFF;
-        color:  #1e293e;
+        background-color: #4a7fb3;
+        color:  #fff;
     }
 }
