ref #164: add hover bg & color to betslip tabs

--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -40,6 +40,11 @@
                 border-top-right-radius: 6px;
             }
 
+            &:hover {
+                background-color: #4a7fb3;
+                color:  #fff;
+            }
+
             &.selected {
                 color: #FFF;
                 background: #ff3300;
