ref #164: add hover

--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -164,6 +164,10 @@
             color: #99ccff;
             cursor: pointer;
 
+            &:hover {
+                color: #ffcc00;
+            }
+
             &.marketsCount.odd {
                 background-color: #435772;;
             }
