--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -12,6 +12,8 @@
     -moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
     box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
 
+    //box-shadow: -7px 0 5px -4px rgba(0,0,0,0.55), 0px -7px 5px -4px rgba(0,0,0,0.55), 0px 7px 5px -4px rgba(0,0,0,0.45);
+
     .tab {
         font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
         font-size: 18px;
