#168: Added mini logo.

--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -115,7 +115,9 @@ nav {
     }
     .col-xs-6 .nav-onscroll {
       padding: 0;
-      margin-left: -8px;
+      &.navbar-nav {
+        padding-left: 40px;
+      }
     }
     .nav-onscroll,
     .nav-ontop {
