ref #164: add transitions

--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -163,6 +163,7 @@
             background-color: #2d415c;
             color: #99ccff;
             cursor: pointer;
+            transition: all .5s ease;
 
             &:hover {
                 color: #ffcc00;
