--- a/resources/assets/sass/sportsMenu/fixturesMenu.scss
+++ b/resources/assets/sass/sportsMenu/fixturesMenu.scss
@@ -13,6 +13,7 @@
         border-spacing: 0;
         color: #FFF;
         border-bottom: 1px solid #2d415c;
+        transition: all .5s ease;
 
         .favorite {
             display: table-cell;
