--- a/resources/assets/sass/sportsMenu/regionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/regionsMenu.scss
@@ -10,6 +10,7 @@
         cursor: pointer;
         color: #FFF;
         line-height: 35px;
+        transition: all .5s ease;
 
         &:hover{
             background-color: #FFF;
