--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -10,6 +10,7 @@
     -webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
     -moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
     box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    transition: all .5s ease;
 
     &.float {
         position: absolute;
@@ -26,6 +27,7 @@
         border: none;
         background: none;
         box-sizing: border-box;
+        transition: all .5s ease;
     }
 
     > .header {
@@ -113,6 +115,7 @@
 
         .bets-content {
             overflow-y: auto;
+            transition: all .5s ease;
 
             &::-webkit-scrollbar {
                 width: 7px;
