--- a/resources/assets/sass/sportsMenu/competitionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/competitionsMenu.scss
@@ -7,6 +7,7 @@
         padding: 8px 15px 8px 25px;
         color: #FFF;
         cursor: pointer;
+        transition: all .5s ease;
 
         &.selected {
             color: #ff9900;
