--- a/resources/assets/sass/sportsMenu/sportsMenu.scss
+++ b/resources/assets/sass/sportsMenu/sportsMenu.scss
@@ -9,6 +9,7 @@
         padding: 0 15px;
         color: #99ccff;
         cursor: pointer;
+        transition: all .5s ease;
 
         &.selected {
             color: #FFF;
