--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -7,16 +7,14 @@
     word-break: break-all;
     z-index: 100;
     background: #101928;
-    -webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
-    -moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
-    box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    //-webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    //-moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    //box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
     transition: all .5s ease;
 
     &.float {
         position: absolute;
     }
-
-    //box-shadow: -7px 0 5px -4px rgba(0,0,0,0.55), 0px -7px 5px -4px rgba(0,0,0,0.55), 0px 7px 5px -4px rgba(0,0,0,0.45);
 
     .tab {
         font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
