ref #164: set scroll auto

--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -112,7 +112,7 @@
         }
 
         .bets-content {
-            overflow-y: scroll;
+            overflow-y: auto;
             transition: all .5s ease;
 
             &::-webkit-scrollbar {
