ref #164: add cpIcons.css

--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -19,7 +19,7 @@
 @import 'sportsMenu/competitionsMenu';
 @import 'sportsMenu/fixturesMenu';
 
-@import 'sportsMenu/sportsIcons';
+@import 'sports/cpIcons';
 
 @import 'sports/fixtures';
 @import 'sports/betslip';
