ref #172: use new icons

--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -188,6 +188,7 @@ nav {
   }
   .board-menu-option {
     color: @right-menu-color;
+    text-decoration: none;
     &:hover {
       color: @btn-menu-hover-color;
     }
