--- a/resources/assets/sass/sportsMenu/competitionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/competitionsMenu.scss
@@ -13,7 +13,7 @@
             color: #ff9900;
         }
 
-        .fa-caret-right {
+        .cp-caret-right {
             margin-top: 4px;
             font-size: 14px;
             float: right;
