--- a/resources/assets/sass/sportsMenu/sportsMenu.scss
+++ b/resources/assets/sass/sportsMenu/sportsMenu.scss
@@ -15,17 +15,17 @@
             color: #FFF;
         }
 
-        .fa {
+        .cp {
             line-height: 39px;
             font-size: 18px;
         }
 
-        .fa-caret-down {
+        .cp-caret-down {
             float: right;
             color: #ff9900;
         }
 
-        .fa-plus {
+        .cp-plus {
             float: right;
             font-size: 14px;
         }
