--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -43,9 +43,6 @@
             cursor: pointer;
 
         }
-        >i.fa-bar-chart {
-            font-size: 14px;
-        }
     }
 
     .title {
@@ -57,17 +54,17 @@
         color: #FFF;
         background-color: #4a7fb3;
         padding: 0 20px;
-        cursor: pointer;
+
+        span {
+            cursor: pointer;
+        }
 
         i {
             float: right;
             line-height: 42px;
             width: 15px;
             text-align: center;
-
-            &.fa-caret-down {
-                font-size: 18px;
-            }
+            cursor: pointer;
         }
     }
 
