--- a/resources/assets/sass/sportsMenu/regionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/regionsMenu.scss
@@ -21,7 +21,7 @@
             float: right;
         }
 
-        .fa-caret-down {
+        .cp-caret-down {
             font-size: 16px;
             line-height: 35px;
             float: right;
