--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -41,7 +41,11 @@
             margin: 0 20px 0 0;
             line-height: 42px;
             cursor: pointer;
+            font-size: 14px;
 
+            &.cp-cross {
+                font-size: 12px;
+            }
         }
     }
 
@@ -65,6 +69,10 @@
             width: 15px;
             text-align: center;
             cursor: pointer;
+
+            &.cp-plus {
+                font-size: 12px;
+            }
         }
     }
 
