--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -83,6 +83,10 @@
             width: 50px;
             border-radius: 0 5px 0 0;
             cursor: pointer;
+
+            i.cp-plus {
+                font-size: 12px;
+            }
         }
 
         .sport, .highgames {
