ref #172: factor font sizes

--- a/resources/assets/sass/global/cpHelpers.scss
+++ b/resources/assets/sass/global/cpHelpers.scss
@@ -2,6 +2,18 @@
     display: inline-block;
 }
 
+.cp-caret-down {
+    font-size: 18px;
+}
+
+.cp-plus {
+    font-size: 14px;
+}
+
+.cp-cross {
+    font-size: 12px;
+}
+
 .cp-spin {
     display: inline-block;
     animation: spin 4s infinite linear;
