ref #172: set cp-stats-bars default size to 16px

--- a/resources/assets/sass/global/cpHelpers.scss
+++ b/resources/assets/sass/global/cpHelpers.scss
@@ -14,6 +14,10 @@
     font-size: 12px;
 }
 
+.cp-stats-bars {
+    font-size: 16px;
+}
+
 .cp-spin {
     display: inline-block;
     animation: spin 4s infinite linear;
