ref #172: set new icons

--- a/resources/assets/sass/statistics/statistics.scss
+++ b/resources/assets/sass/statistics/statistics.scss
@@ -14,8 +14,8 @@
             cursor: pointer;
         }
 
-        i.fa-bar-chart {
-            margin-top: 15px;
+        i.cp-stats-bars {
+            margin-top: 13px;
             font-size: 14px;
         }
     }
