--- a/resources/assets/less/old.header.less
+++ b/resources/assets/less/old.header.less
@@ -57,9 +57,9 @@
   font-size: 180%;
   color: #fff;
 }
-.fa-cog:hover {
-  -webkit-animation: fa-spin 2s 360 linear;
-  animation: fa-spin 2s 360 linear;
+.cp-cog:hover {
+  -webkit-animation: cp-spin 2s 360 linear;
+  animation: cp-spin 2s 360 linear;
 }
 .main-menu {
   padding: 7px 0;
