--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -100,13 +100,13 @@
         }
       }
     }
-    .fa-2x {
+    .cp-2x {
       line-height: 40px;
       cursor: pointer;
       text-decoration: none !important;
       outline: none;
     }
-    a.fa-2x {
+    a.cp-2x {
       line-height: 30px;
     }
     .button {
