--- a/resources/assets/sass/global/cpHelpers.scss
+++ b/resources/assets/sass/global/cpHelpers.scss
@@ -20,12 +20,14 @@
 
 .cp-spin {
     display: inline-block;
-    animation: spin 4s infinite linear;
-
-    @keyframes spin {
-        from {transform:rotate(0deg);}
-        to {transform:rotate(360deg);}
-    }
+    animation: cp-spin 4s infinite linear;
 }
 
+@keyframes cp-spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
 
+.cp-2x {
+    font-size: 2em;
+}
