--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -39,7 +39,7 @@ form {
   .input-group {
     width: 100%;
 
-    i.fa {
+    i {
       font-size: 16px;
       position: absolute;
       top: 4px;
@@ -47,7 +47,7 @@ form {
       right: 4px;
     }
 
-    select + i.fa {
+    select + i {
       right: 18px;
     }
 
