ref #172: set new icon class

--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -42,7 +42,7 @@
             line-height: 42px;
             cursor: pointer;
 
-            &.cp-stats-bars {
+            &.cp-stats-dots {
                 font-size: 14px;
             }
         }
