--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -174,6 +174,10 @@ nav {
     padding: 0 8px;
     border-left: 1px dashed @navbar-dashed-color;
   }
+  .cp-question-circle-o {
+    font-size: 14px;
+    vertical-align: text-bottom;
+  }
   @media (max-width: @screen-md-max) {
     .brand-link {
       padding: 0 5px;
