--- a/resources/assets/sass/statistics/statistics.scss
+++ b/resources/assets/sass/statistics/statistics.scss
@@ -14,7 +14,7 @@
             cursor: pointer;
         }
 
-        i.cp-stats-bars {
+        i.cp-stats-dots {
             margin-top: 13px;
             font-size: 14px;
         }
