--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -9,7 +9,7 @@
     width: 100%;
     text-align: center;
     font-size: 4em;
-    color: #000;
+    color: $color-text-box;
     i {
       margin: 200px auto;
     }
