ref #172: set different spin speed

--- a/resources/assets/sass/global/cpHelpers.scss
+++ b/resources/assets/sass/global/cpHelpers.scss
@@ -15,7 +15,10 @@
 }
 
 .cp-spin {
-    display: inline-block;
+    animation: cp-spin 1s infinite linear;
+}
+
+.cp-spin-4x {
     animation: cp-spin 4s infinite linear;
 }
 
