--- a/resources/assets/sass/global/global.scss
+++ b/resources/assets/sass/global/global.scss
@@ -18,6 +18,12 @@ body.iframe {
   width: 100%;
 }
 
+.body-mobile > * {
+    @media (max-width: 540px) {
+        display: none;
+    }
+}
+
 .bet a:focus,
 .bet button:focus,
 .bet .bs-wp a:focus,
