--- a/resources/assets/sass/common/promotions.scss
+++ b/resources/assets/sass/common/promotions.scss
@@ -36,6 +36,11 @@
             text-align: center;
         }
 
+        &.noPromos {
+            padding: 20px;
+            text-align: center;
+        }
+
         .promotion {
             position: relative;
             padding: 20px;
