--- a/resources/assets/sass/common/promotions.scss
+++ b/resources/assets/sass/common/promotions.scss
@@ -26,7 +26,7 @@
         }
     }
 
-    .content {
+    .content, .content2 {
         overflow: hidden;
         background-color: #fff;
         color: #1e293e;
@@ -71,6 +71,8 @@
                 }
                 .image {
                     float: left;
+                    width: 150px;
+                    height: 150px;
                     margin: 0 20px 0 0;
                 }
                 .title {
