--- a/resources/assets/sass/common/vue-transitions.scss
+++ b/resources/assets/sass/common/vue-transitions.scss
@@ -16,17 +16,21 @@
     }
 }
 
+.vue-slide-down-enter-active {
+    animation: vueSlideDown 1s;
+}
 
 .vue-slide-enter-active {
-    animation: vueSlideDown .4s ease;
+    max-height: 2000px;
+    transition: max-height 1s ease-in;
 }
 
 .vue-slide-leave-active {
-    animation: vueSlideUp .4s ease;
+    max-height: 2000px;
+    transition: max-height .4s ease-out;
 }
-
-.vue-slide-down-enter-active {
-    animation: vueSlideDown .4s ease;
+.vue-slide-enter, .vue-slide-leave-to {
+    max-height: 0;
 }
 
 .vue-fade-enter-active, .vue-fade-leave-active {
@@ -34,13 +38,5 @@
 }
 
 .vue-fade-enter, .vue-fade-leave-to {
-    opacity: 0
-}
-
-.vue-fade-in-enter-active{
-    transition: opacity .5s
-}
-
-.vue-fade-in-enter {
     opacity: 0
 }
