--- a/resources/assets/sass/casino.scss
+++ b/resources/assets/sass/casino.scss
@@ -22,9 +22,9 @@
 
 @import "casino/profile.scss";
 
-@import 'global/cpIcons';
+@import 'common/cpIcons';
 
-@import 'global/cpHelpers';
+@import 'common/cpHelpers';
 
 body {
   background: $body-bg;
