--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -30,7 +30,7 @@
 /* Old variables */
 @brand-color: #112149;
 
-@navbar-color-active: #edac00;
+@navbar-color-active: #FF9900;
 @navbar-color: #ffffff;
 @navbar-back-color: @brand-color;
 
