--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -34,7 +34,7 @@
         background-color: #101928;
 
         .tab {
-            line-height: 38px;
+            line-height: 40px;
             font-weight: bold;
             color: #497d92;
 
@@ -87,6 +87,12 @@
                 padding: 0 0 0 15px;
                 line-height: 40px;
                 background-color: #1e293e;
+
+                i {
+                    line-height: 40px;
+                    margin-right: 12px;
+                    float: right;
+                }
 
                 i.cp-caret-down {
                     color: #ff9900;
@@ -187,7 +193,6 @@
                     float: right;
                     font-weight: bold;
                     color: #ff9900;
-
                     i {
                         font-size: 16px;
                         color: #99cc00;
