ref #192: Fix popup in private mode for IOS & Set promotions image path

--- a/resources/assets/sass/global/global.scss
+++ b/resources/assets/sass/global/global.scss
@@ -18,8 +18,8 @@ body.iframe {
   width: 100%;
 }
 
-.body-mobile > * {
-    @media (max-width: 540px) {
+.body-mobile-hidden > * {
+    @media (max-width: 768px) {
         display: none;
     }
 }
