ref #194: Show "Mercados Fechados" when game is ended

--- a/resources/assets/sass/sportsMenu/regionsMenu.scss
+++ b/resources/assets/sass/sportsMenu/regionsMenu.scss
@@ -9,6 +9,7 @@
         padding: 0 15px;
         cursor: pointer;
         color: #FFF;
+        height: 40px;
         line-height: 40px;
         transition: all .5s ease;
 
