ref #201: Mudar cor das odds no BETSLIP

--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -192,7 +192,7 @@
                 .odds {
                     float: right;
                     font-weight: bold;
-                    color: #ff9900;
+                    color: #ffcc00;
                     i {
                         font-size: 16px;
                         color: #99cc00;
@@ -263,7 +263,7 @@
 
             .odds {
                 float: right;
-                color: #ff9900;
+                color: #ffcc00;
 
                 &.old {
                     text-decoration: line-through;
